Setup Production Environment

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>かんじょうにっき - 感情日記アプリ</title>
+    <title>かんじょうにっき - 自己肯定感を育てる感情日記アプリ</title>
     <meta name="description" content="自己肯定感を育てる感情日記アプリ。テープ式心理学に基づいた心の健康サポートツール。" />
+    <meta property="og:title" content="かんじょうにっき - 自己肯定感を育てる感情日記アプリ" />
+    <meta property="og:description" content="テープ式心理学に基づいた心の健康サポートツール。自己肯定感を育てる感情日記アプリです。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kanjou-nikki.netlify.app/" />
+    <meta property="og:image" content="https://images.pexels.com/photos/3808904/pexels-photo-3808904.jpeg" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
